--- a/templates/admin/company_profile_form.html
+++ b/templates/admin/company_profile_form.html
@@ -4,7 +4,7 @@
 
 
 {% include './company_profile.html' %}
-<div class="container" style="margin-left:270px">
+<div class="container">
     <form method="post">
         {% csrf_token %}
         <div class="row mt-5 mb-5">
