--- a/templates/admin/update_company.html
+++ b/templates/admin/update_company.html
@@ -115,10 +115,10 @@
                 </div>
 
 
-                <div class="mb-3 mt-3 inline">
+                <!-- <div class="mb-3 mt-3 inline">
                     <label for="product_name">Products</label>
                     <input type="text" class="form-control w-50" name="product_name" value="{{ products.product_name }}" required>
-                </div>
+                </div> -->
             </div>
             
         </div>
