--- a/templates/login.html
+++ b/templates/login.html
@@ -175,8 +175,8 @@
         </div>
         <div class="d-flex justify-content-between align-items-center mb-3">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="remember-me">
-            <label class="form-check-label" for="remember-me">Remember me</label>
+            <input class="form-check-input" type="checkbox" id="remember_me" name="remember_me">
+            <label class="form-check-label" for="remember_me">Remember me</label>
           </div>
           <a href="{% url 'forgot_password_1' %}" class="text-danger" style="font-size: 0.9rem;"><b>Forgot
               Password?</b></a>
@@ -199,7 +199,7 @@
     <div class="signup-message">
       <h1>New here?</h1>
       <p>Sign up and discover great opportunities.</p>
-      <a href="{% url 'sign_up' %}" class="btn btn-secondary btn-custom">Sign Up</a>
+      <a href="{% url 'signup' %}" class="btn btn-secondary btn-custom">Sign Up</a>
     </div>
   </div>
 </div>
