--- a/templates/admin/my_team.html
+++ b/templates/admin/my_team.html
@@ -31,6 +31,9 @@
         </div>
     </div>
 
+    {{current_user}}
+    {{current_subuser}}
+
     <div class="row mt-5 mb-5">
         <div class="col-md-12">
             <div class="table-responsive">
