--- a/templates/admin/company_profile.html
+++ b/templates/admin/company_profile.html
@@ -137,7 +137,7 @@
             <a class="dropdown-btn">CORPORATE FINANCE</a>
             <div class="dropdown-container">
                 <a href="#" data-info="Planning and Budgeting details...">Planning and Budgeting</a>
-                <a href="#" data-info="Financial Statement details...">Financial Statement</a>
+                <a href="{% url 'financial_statement' company_profile.company_id %}" data-info="Financial Statement details...">Financial Statement</a>
                 <a href="#" data-info="Forecasting details...">Forecasting</a>
                 <a href="#" data-info="Performance Management details...">Performance Management</a>
                 <a href="#" data-info="Business Modelling and Valuation details...">Business Modelling and Valuation</a>
