--- a/templates/admin/company_profile_form.html
+++ b/templates/admin/company_profile_form.html
@@ -53,10 +53,10 @@
                     <input type="text" class="form-control w-50" name="product_name" required>
                 </div> -->
 
-                <!-- <div class="mb-3 mt-3 inline">
+                <div class="mb-3 mt-3 inline">
                     <label for="date_of_inc">Date of Incorporation</label>
                     <input type="date" class="form-control w-50" name="date_of_inc" required>
-                </div> -->
+                </div>
             </div>
 
         </div>
