--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/styles.css'%}" rel="stylesheet">
   <link href="{% static 'css/super_admin.css'%}" rel="stylesheet">
+  <link href="{% static 'css/contact.css'%}" rel="stylesheet">
+
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -44,6 +46,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'services' %}">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Sign In</a>
